fixed text alignment issue in AR

--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -60,23 +60,23 @@ a:hover, a:active, a:focus {
     font-size: $font-xxx-large;
 }
 
-.text-align-right {
+.text-right {
     text-align: $text-align-3;
 }
 
-.ar .text-align-right {
+.ar .text-right {
     text-align: $text-align-1;
 }
 
-.text-align-center {
+.text-center {
     text-align: $text-align-2;
 }
 
-.text-align-left {
+.text-left {
     text-align: $text-align-1;
 }
 
-.ar .text-align-left {
+.ar .text-left {
     text-align: $text-align-3;
 }
 
