--- a/src/assets/styles/widgets.scss
+++ b/src/assets/styles/widgets.scss
@@ -1000,6 +1000,8 @@ footer{
 	bottom: 0;
 	color:#fff;
   font-size: 10px;
+	background-color: #212225;
+  border-top: 1px solid #37393e;
 }
 
 .menu-settings button{
